# samo-activities

./: .gitignore  CLAUDE.md  README.md  env.example  pyproject.toml
app/: calendar.py  client.py  config.py  deps.py  main.py  sessions.py
app/models/: activity.py  common.py
app/routes/: activities.py  auth.py
app/services/: activities.py
app/static/: style.css
app/templates/: activity_detail.html  base.html  index.html  login.html
app/templates/partials/: activity_card.html  calendar.html
docs/: santa-monica-recreation-api-docs.md
static/: calendar.js  style.css
tests/: conftest.py
tests/e2e/: conftest.py  test_browse.py  test_calendar.py
tests/integration/: test_routes.py  test_services.py  test_sessions.py
tests/unit/: test_calendar_builder.py  test_date_utils.py  test_models.py
